@@ -1,4 +1,4 @@
-.\" RCSid "$Id: robjutil.1,v 1.5 2020/04/03 02:45:13 greg Exp $"
+.\" RCSid "$Id: robjutil.1,v 1.6 2021/03/12 18:32:33 greg Exp $"
 .TH ROBJUTIL 1 3/31/20 RADIANCE
 .SH NAME
 robjutil - operate on Wavefront .OBJ file
@@ -18,6 +18,8 @@ robjutil - operate on Wavefront .OBJ file
 .B "+/-g gname"
 ][
 .B "-c epsilon"
+][
+.B +T
 ][
 .B "-x 'xf spec'"
 ]
@@ -109,6 +111,10 @@ at least for triangle mesh input.
 does not attempt to break up non-planar polygons into triangles,
 which is usually not a problem for .OBJ output, but may be for Radiance
 scene descriptions (+r).
+.PP
+The
+.I +T
+option turns all faces with 4 or more sides into triangles.
 .PP
 The
 .I \-x
